# egtc-paw-runtime-stagea

./: .gitignore  README.md  egtc_paw_runtime_v5_director_overlooker_tpgo_blueprint.md  pyproject.toml
docs/: experience_catalog_seed_v1.json
egtc_runtime_stagea/: __init__.py  artifact_store.py  codex_wrapper.py  compiler.py  conflict.py  director.py  event_log.py  evidence.py  experience.py  graph_runtime.py  identity.py  models.py  overlooker.py  phaseb_models.py  repo_policy.py  runtime.py  sandbox.py  validators.py  workspace_diff.py
examples/: demo_worker.py  phase_d_codex_retry_fork_demo.py  phase_d_graph_patch_compiler_demo.py  phase_d_graph_runtime_demo.py  phase_d_worker.py  phase_e_branch_integration_demo.py  phase_e_codex_director_patch_demo.py  phase_e_conflict_runtime_demo.py  phase_e_dynamic_replan_runtime_demo.py  phase_e_graph_patch_compiler_demo.py  phase_e_overlooker_review_request_demo.py  phase_e_runtime_graph_patch_apply_demo.py  phase_f_codex_director_experience_demo.py  phase_f_director_planning_skill_negative_demo.py  phase_f_experience_catalog_demo.py  phase_f_experience_compiler_negative_demo.py  phase_f_experience_library_demo.py  phase_g_workflow_learning_demo.py  phaseb_all_codex_agents_complex_demo.py  phaseb_codex_director_complex_demo.py  phaseb_compiler_negative_demo.py  phaseb_director_demo.py  phaseb_swe_complex_demo.py  phasec_all_codex_complex_demo.py  phasec_sandbox_demo.py  stagea_demo.py  swe_case_worker.py  swe_phasea_codex_smoke.py  swe_phasea_smoke.py
scripts/: export_experience_catalog.py  publish_github_private.py  (+2 more)
(+26 files in other folders)
